# plexbackup

./: .bazelrc  .gitignore  .travis.yml  BUILD.bazel  LICENSE  Makefile  README.md  WORKSPACE  go.mod  go.sum  main.go
.github/workflows/: build.yaml  ci.yaml
backup/: BUILD.bazel  backup.go
internal/pkg/countingreader/: BUILD.bazel
stamp/: BUILD.bazel  stamp.go
stamp/code/: BUILD.bazel  code.go
stamp/revision/: BUILD.bazel  revision.go
