load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/gebn/plexbackup
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/gebn/plexbackup",
    visibility = ["//visibility:private"],
    deps = [
        "//backup:go_default_library",
        "@com_github_alecthomas_kingpin//:go_default_library",
        "@com_github_aws_aws_sdk_go//aws:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/session:go_default_library",
        "@com_github_aws_aws_sdk_go//service/s3:go_default_library",
    ],
)

go_binary(
    name = "plexbackup",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
