load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

# gazelle:prefix github.com/gebn/plexbackup
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/gebn/plexbackup",
    visibility = ["//visibility:private"],
    deps = [
        "//backup:go_default_library",
        "@com_github_alecthomas_kingpin//:go_default_library",
        "@com_github_aws_aws_sdk_go//aws:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/session:go_default_library",
        "@com_github_aws_aws_sdk_go//service/s3:go_default_library",
        "@com_github_gebn_go_stamp//:go_default_library",
    ],
)

go_binary(
    name = "plexbackup",
    embed = [":go_default_library"],
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "archive",
    extension = "tar.gz",
    package_dir = "plexbackup",
    srcs = [":plexbackup"],
)
