load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

# gazelle:prefix github.com/gebn/plexbackup
gazelle(name = "gazelle")

go_library(
    name = "plexbackup_lib",
    srcs = ["main.go"],
    importpath = "github.com/gebn/plexbackup",
    visibility = ["//visibility:private"],
    deps = [
        "//backup",
        "@com_github_alecthomas_kingpin//:kingpin",
        "@com_github_aws_aws_sdk_go//aws",
        "@com_github_aws_aws_sdk_go//aws/session",
        "@com_github_aws_aws_sdk_go//service/s3",
        "@com_github_gebn_go_stamp_v2//:go-stamp",
    ],
)

go_binary(
    name = "plexbackup",
    embed = [":plexbackup_lib"],
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "archive",
    srcs = [":plexbackup"],
    extension = "tar.gz",
    package_dir = "plexbackup",
)
