load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["backup.go"],
    importpath = "github.com/gebn/plexbackup/backup",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/pkg/countingreader:go_default_library",
        "@com_github_aws_aws_sdk_go//service/s3:go_default_library",
        "@com_github_aws_aws_sdk_go//service/s3/s3manager:go_default_library",
    ],
)
