load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["stamp.go"],
    importpath = "github.com/gebn/plexbackup/stamp",
    visibility = ["//visibility:public"],
    deps = [
        "//stamp/build:go_default_library",
        "//stamp/revision:go_default_library",
    ],
)
